--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ header label:hover {
 
 
 .block_2{
-    width: 80%;
+    width: 70%;
     margin: 50px auto;
 }
 
@@ -202,4 +202,95 @@ header label:hover {
         font-weight: bold;
         line-height: 30px;
     }
+}
+
+
+.block_3{
+    width: 100%;
+    height: 900px;
+    background: gold;
+}
+
+
+
+
+.block_4{
+    width: 100%;
+    height: 900px;
+    background: blueviolet;
+}
+
+.block_5{
+    width: 100%;
+    height: 900px;
+    background: blue;
+}
+
+
+
+.block_6 .contact{
+    margin: 30px auto;
+    text-align: center;
+}
+
+.block_6 .conntact_p{
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.block_6 h5{
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 10px;
+    color: chocolate;
+}
+
+.block_6 input{
+    width: 250px;
+    height: 25px;
+    text-align: center;
+}
+
+
+
+
+footer{
+    width: 80%;
+    position: relative;
+    margin: 20px auto 50px auto;
+    height: 30px;
+    font-weight: bold;
+}
+footer .left_footer {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+
+
+footer .right_footer {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+}
+
+
+
+
+footer .right_footer img{
+    height: 30px;
+    margin: 0 7px;
+}
+
+footer .right_footer p{
+   line-height: 30px;
+    margin: 0 20px 0 0;
+}
+
+
+.clearfix {
+    clear: both;
 }
