--- a/style.css
+++ b/style.css
@@ -36,13 +36,6 @@ body{
     font-weight: bold;
 }
 
-
-
-
-
-
-
-
 header {
      margin: 0 auto;
 }
@@ -104,8 +97,42 @@ header label:hover {
     color: #3276a9;
 }
 
+/*Riss*/
+.internatura {
+    width:100%;
+    min-height: 900px;
+    background: url(picture/int.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 28px;
+    font-family: Verdana, sans-serif;
+    color: white;
+    margin: 0 auto;
+}
 
+.int {
+    margin: 70px 30px;
+}
 
+.txt {
+    color: #0086b5;
+    text-align: center;
+}
+
+.txt2 {
+    font-size: 24px;
+    color: #0086b5;
+    padding: 30 0px;
+}
+
+.info {
+    width: 33%;
+    float: left;
+}
+/*Riss*/
 
 @media (max-width: 1030px) {
     header {
