--- a/style.css
+++ b/style.css
@@ -233,9 +233,18 @@ header label:hover {
 
 
 .block_3{
-    width: 100%;
-    height: 900px;
-    background: gold;
+    width:100%;
+    min-height: 900px;
+    background: url(img/int.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 28px;
+    font-family: Verdana, sans-serif;
+    color: white;
+    margin: 0 auto;
 }
 
 
