--- a/style.css
+++ b/style.css
@@ -237,10 +237,59 @@ header label:hover {
 
 
 .block_4{
-    width: 100%;
-    height: 900px;
-    background: blueviolet;
+    width: 70%;
+    height: 300px;
+    margin: 40px auto;
+
 }
+.wrapper .active {
+    color: #fff;
+    border-bottom: 1px solid #45a4ff;
+    background: #3276a9;
+}
+
+.tabs{
+    text-align: center;
+    font-weight: bold;
+}
+
+.tab {
+    background: #d5eeff;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    border-radius: 3px 3px 0 0;
+    padding: 0.5em 3em;
+    display: inline-block;
+    margin-bottom: -1px;
+    position: relative;
+    z-index: 2;
+    transition: all 1s;
+}
+.tab_item{
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 1em 1em;
+}
+.left_colom{
+    width: 48%;
+    float: left;
+    padding: 0 10px;
+}
+.right_colom{
+    width: 48%;
+    float: left;
+    padding: 0 10px;
+}
+
+.clearfix{
+    clear: both;
+}
+
+
+
+
+
+
 
 .block_5{
     width: 100%;
