--- a/style.css
+++ b/style.css
@@ -28,13 +28,17 @@ body{
 }
 
 .bg1 .text_na_bg1 h1{
+    background-color: white;
     font-size: 5rem;
-    margin: 20px;
+    margin-left: 500px;
+    margin-right: 500px;
+    margin-bottom: 15px;
 }
 .bg1 .text_na_bg1 p{
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin: 0px 30px;
-    font-weight: bold;
+    font-weight: lighter;
+    color: white;
     /*text-shadow: white 3px 0px, white 3px 3px, white 0px 3px, white -3px 3px, white -3px 0px, white -3px -3px, white 0px -3px, white 3px -3px;}*/
 }
 
@@ -103,18 +107,23 @@ header label:hover {
 /*Riss*/
 
 .int {
-    margin: 70px 100px;
+    margin: 30px 100px;
 }
 
 .txt {
-    color: #0086b5;
+    color: white;
     text-align: center;
+    font-weight: lighter;
 }
 
 .txt2 {
     font-size: 1.5rem;
-    color: #0086b5;
+    color: white;
     padding: 30 0px;
+}
+
+.gal {
+    width: 30%;
 }
 
 .info {
@@ -224,7 +233,7 @@ header label:hover {
 
 .block_3{
     width:100%;
-    min-height: 900px;
+    min-height: 580px;
     background: url(img/int.jpg);
     background-size: cover;
     background-position: center;
@@ -232,7 +241,8 @@ header label:hover {
     flex-direction: column;
     justify-content: center;
     font-size: 1.5rem;
-    font-family: Verdana, sans-serif;
+    /*font-family: Verdana, sans-serif;*/
+    font-weight: lighter;
     color: white;
     margin: 0 auto;
 }
