--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
+
+@font-face {
+font-family: "PF BeauSans Pro";  /* имя шрифта для CSS правил */
+src: url(fonts/PFBeauSansPro-Reg.ttf); /* проверяем наличие шрифта в ОС пользователя */
+ /* если шрифт не установлен, тогда загружаем его по указанному пути */
+}
+
+
 body{
     padding: 0;
     margin: 0;
     /*background: url(img/background.jpg);*/
     background-size: cover;
     box-sizing: border-box;
-    font-family: "Verdana", sans-serif;
+   
+    /*font-family: "Verdana", sans-serif;*/
 }
 
 
@@ -39,6 +48,7 @@ body{
     margin: 0px 30px;
     font-weight: lighter;
     color: white;
+    background-color:  #0090b9;
     /*text-shadow: white 3px 0px, white 3px 3px, white 0px 3px, white -3px 3px, white -3px 0px, white -3px -3px, white 0px -3px, white 3px -3px;}*/
 }
 
