--- a/style.css
+++ b/style.css
@@ -328,9 +328,26 @@ header label:hover {
     text-align: center;
 }
 
+.block_6 .form_bottom{
+    display: inline-block;
+    width: 30%;
+    font-family: 'pf_thin';
+    font-size: 20px;
+    line-height: 20px;
+    padding: 10px 20px 10px 20px;
+    background: #00ade5;
+    border-radius: 10px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    border: 2px solid #00ade5;
+    text-transform: uppercase;
+}
 
-
-
+.block_6 .form_bottom:hover {
+    background: #fff;
+    color: #00ade5;
+}
 
 
 
