--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@ header {
     position: fixed;
     right: 25px;
     top: 35px;
-    background: rgba(255, 255, 255, 0.3);
+    background: #0090b9;
+    /*background: rgba(255, 255, 255, 0.9);*/
     z-index: 9999;
 }
 
@@ -98,13 +99,14 @@ header label {
     width: 30px;
     height: 30px;
     padding: 10px;
+    background:  #00ade5;
     border-right: 1px solid #fff;
     border-radius: 0 50px 50px 0;
 }
 header label:hover {
+
     cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
-    color: darkgray;
+    color: #fff;
 }
 
 .menu_a {
@@ -112,24 +114,32 @@ header label:hover {
     list-style: none;
     padding: 0;
     display: flex;
+
+
+
+
+    
     justify-content: flex-end;
-    font-size: 1.1rem;
+    font-size: 1rem;
 
 }
-.menu_a .tabs_menu_a:hover {
-    background: rgba(78, 114, 194, 0.3);
-}
+/*.menu_a .tabs_menu_a:hover {*/
+    /*background: rgba(78, 114, 194, 0.3);*/
+/*}*/
 
 .tabs_menu_a a {
     display: block;
-    padding: 15px 30px;
+    padding: 5px 10px;
     text-decoration: none;
-    color: #0090b9;
+    background: #00ade5;
+    border: 1px solid #00ade5;
+    color: #ffffff;
 }
 
 
 .tabs_menu_a a:hover {
-    color: #3276a9;
+    background: #ffffff;
+    color:  #00ade5;
 }
 
 /*Riss*/
@@ -385,7 +395,6 @@ header label:hover {
     line-height: 20px;
     padding: 10px 20px 10px 20px;
     background: #00ade5;
-    border-radius: 10px;
     color: #fff;
     text-decoration: none;
     text-align: center;
@@ -395,14 +404,8 @@ header label:hover {
 
 .block_6 .form_bottom:hover {
     background: #fff;
-    color: #00ade5;
+    color: #00ade5:
 }
-
-
-
-
-
-
 
 footer{
     width: 80%;
