--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ header label {
     border-radius: 0 50px 50px 0;
 }
 header label:hover {
-
     cursor: pointer;
     color: #fff;
 }
@@ -114,18 +113,12 @@ header label:hover {
     list-style: none;
     padding: 0;
     display: flex;
-
-
-
-
-    
     justify-content: flex-end;
     font-size: 1rem;
+    color: #ffffff;
 
 }
-/*.menu_a .tabs_menu_a:hover {*/
-    /*background: rgba(78, 114, 194, 0.3);*/
-/*}*/
+
 
 .tabs_menu_a a {
     display: block;
@@ -140,6 +133,10 @@ header label:hover {
 .tabs_menu_a a:hover {
     background: #ffffff;
     color:  #00ade5;
+}
+/*актианая ссылка*/
+.box1111{
+    color: #D4B30A;
 }
 
 /*Riss*/
@@ -157,7 +154,7 @@ header label:hover {
 .txt2 {
     font-size: 1.5rem;
     color: white;
-    padding: 30 0px;
+    padding: 30px 0px;
 }
 
 .gal {
@@ -185,7 +182,7 @@ header label:hover {
     .fullwrap_a{
         left: 0;
     }
-    .navigation_a {
+    #navigation_a {
         position: absolute;
         background: rgba(255, 255, 255, 0.3);
         top: 50px;
@@ -202,7 +199,7 @@ header label:hover {
         border-top: 1px solid #fff;
     }
 
-    #btn_menu_a:checked ~ .navigation_a {
+    #btn_menu_a:checked ~ #navigation_a {
         left: 0;
     }
 
@@ -390,7 +387,6 @@ header label:hover {
 .block_6 .form_bottom{
     display: inline-block;
     width: 30%;
-    font-family: 'pf_thin';
     font-size: 20px;
     line-height: 20px;
     padding: 10px 20px 10px 20px;
@@ -404,7 +400,7 @@ header label:hover {
 
 .block_6 .form_bottom:hover {
     background: #fff;
-    color: #00ade5:
+    color: #00ade5;
 }
 
 footer{
@@ -450,3 +446,7 @@ footer .right_footer p{
         position: relative;
     }
 }
+
+
+
+
