--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    color: #0090b9;
+    color: #00ade5;
 
 }
 
@@ -63,10 +63,10 @@ body{
 }
 .bg1 .text_na_bg1 p{
     font-size: 2.5rem;
-    margin: 0px 30px;
+    margin: 0px 25px;
     font-weight: lighter;
     color: white;
-    background-color:  #0090b9;
+    background-color:  #00ade5;
     /*text-shadow: white 3px 0px, white 3px 3px, white 0px 3px, white -3px 3px, white -3px 0px, white -3px -3px, white 0px -3px, white 3px -3px;}*/
 }
 
@@ -78,7 +78,7 @@ header {
     position: fixed;
     right: 25px;
     top: 35px;
-    background: #0090b9;
+    background: #00ade5;
     /*background: rgba(255, 255, 255, 0.9);*/
     z-index: 9999;
 }
@@ -86,7 +86,7 @@ header {
 
 header .logo_nav_a {
     top: 30px;
-    left: 60px;
+    left: 25px;
     position: fixed;
 }
 
@@ -143,22 +143,27 @@ header label:hover {
 
 .int {
     margin: 30px 100px;
+    background-color: #00ade5;
+    margin: 0px 25px;
 }
 
 .txt {
     color: white;
     text-align: center;
     font-weight: lighter;
+
 }
 
 .txt2 {
     font-size: 1.5rem;
     color: white;
-    padding: 30px 0px;
+    padding: 5px 0px;
+    margin: 0px 25px 0px 25px;
+    background-color: #00ade5;
 }
 
 .gal {
-    width: 30%;
+    width: 20%;
 }
 
 .info {
@@ -236,7 +241,7 @@ header label:hover {
 }
 
 .block_2 p{
-    color: #0086b5;
+    color: #00ade5;
     text-align: justify;
     font-size: 1.5rem;
     font-weight: lighter;
@@ -310,7 +315,7 @@ header label:hover {
 }
 
 .tab {
-    background: #6d6e71;
+    background: #00ade5;
     cursor: pointer;
     border: 1px solid #ddd;
     border-radius: 3px 3px 0 0;
@@ -319,7 +324,7 @@ header label:hover {
     margin-bottom: -1px;
     position: relative;
     z-index: 2;
-    transition: all 1s;
+    /*transition: all 1s;*/
 }
 .tab_item{
     border: 1px solid #ddd;
@@ -375,11 +380,11 @@ header label:hover {
     font-size: 3rem;
     font-weight: bold;
     margin: 10px;
-    color: #0090b9;
+    color: #00ade5;
 }
 
 
-.block_6 .contact input{
+.block_6 .contact input {
     text-align: center;
 
 }
@@ -409,7 +414,7 @@ footer{
     margin: 20px auto 50px auto;
     height: 30px;
     font-weight: bold;
-    color: #6d6e71;
+    color: #00ade5;
 
 }
 footer .left_footer {
