--- a/style.css
+++ b/style.css
@@ -58,18 +58,95 @@ body{
 .bg1 .text_na_bg1 h1{
     background-color: white;
     font-size: 5rem;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-bottom: 15px;
+    margin-left: 1000px;
+    margin-right: 1000px;
+    margin-bottom: 30px;
 }
+
 .bg1 .text_na_bg1 p{
     font-size: 2.5rem;
-    margin: 0px 25px;
+    margin: 0px 600px;
     font-weight: lighter;
     color: white;
     background-color:  #00ade5;
-    /*text-shadow: white 3px 0px, white 3px 3px, white 0px 3px, white -3px 3px, white -3px 0px, white -3px -3px, white 0px -3px, white 3px -3px;}*/
+
 }
+        @media (max-width: 2535px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 900px;
+                margin-right: 900px;
+            }
+        }
+
+        @media (max-width: 2350px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 800px;
+                margin-right: 800px;
+            }
+        }
+
+        @media (max-width: 2160px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 700px;
+                margin-right: 700px;
+            }
+        }
+
+        @media (max-width: 1980px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 600px;
+                margin-right: 600px;
+            }
+        }
+
+        @media (max-width: 1755px) {
+            .bg1 .text_na_bg1 h1{
+                font-size: 4rem;
+            }
+            .bg1 .text_na_bg1 p{
+                font-size: 2rem;
+            }
+        }
+        @media (max-width: 1680px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 550px;
+                margin-right: 550px;
+            }
+            .bg1 .text_na_bg1 p{
+                margin: 0px 550px;
+            }
+        }
+        @media (max-width: 1580px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 450px;
+                margin-right: 450px;
+            }
+            .bg1 .text_na_bg1 p{
+                margin: 0px 450px;
+            }
+        }
+
+        @media (max-width: 1460px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 350px;
+                margin-right: 350px;
+            }
+            .bg1 .text_na_bg1 p{
+                margin: 0px 450px;
+            }
+        }
+        
+        @media (max-width: 1340px) {
+            .bg1 .text_na_bg1 h1{
+                margin-left: 350px;
+                margin-right: 350px;
+            }
+            .bg1 .text_na_bg1 p{
+                margin: 0px 350px;
+            }
+        }
+
+
 
 header {
      margin: 0 auto;
@@ -127,7 +204,7 @@ header label:hover {
     padding: 5px 10px;
     text-decoration: none;
     background: #00ade5;
-    border: 1px solid #00ade5;
+    /*border: 1px solid #00ade5;*/
     color: #ffffff;
 }
 
@@ -144,7 +221,7 @@ header label:hover {
 /*Riss*/
 
 .int {
-    margin: 30px 100px;
+    margin: 0px 240px;
     background-color: #00ade5;
     margin-bottom: 170px;
 }
@@ -160,7 +237,7 @@ header label:hover {
     font-size: 1.5rem;
     color: white;
     padding: 5px 0px;
-    margin: 0px 50px 0px 50px;
+    margin: 0px 170px 0px 170px;
     background-color: #00ade5;
     opacity: 0.9;
 }
@@ -235,12 +312,13 @@ header label:hover {
 .block_2{
     width: 70%;
     margin: 50px auto;
+    min-height: 320px;
 }
 
 .block_2 img{
-    width: 45%;
+    width: 35%;
     float: left;
-    margin: 0 20px 0 0;
+    margin: 2px 20px 0 0;
 }
 
 .block_2 p{
@@ -248,7 +326,8 @@ header label:hover {
     text-align: justify;
     font-size: 1.5rem;
     font-weight: lighter;
-    line-height: 30px;
+    line-height: 35px;
+    /*padding-top: 10px;*/
 }
 
 @media (max-width: 1300px) {
