Slider autoplay  +sliderWidth 100%

--- a/js/jquery.bxslider.css
+++ b/js/jquery.bxslider.css
@@ -22,7 +22,7 @@
 }
 
 .bx-wrapper img {
-	max-width: 100%;
+	width: 100%;
 	display: block;
 }
 
@@ -202,3 +202,4 @@
 	font-size: .85em;
 	padding: 10px;
 }
+
