--- a/js/jquery.bxslider.css
+++ b/js/jquery.bxslider.css
@@ -22,7 +22,7 @@
 }
 
 .bx-wrapper img {
-	width: 100%;
+	width: 100%;  /* при max-width слайд не растягивается по всей ширине */
 	display: block;
 }
 
@@ -87,13 +87,13 @@
 	background: #666;
 	text-indent: -9999px;
 	display: block;
-	width: 10px;
-	height: 10px;
+	width: 20px;
+	height: 20px;
 	margin: 0 5px;
 	outline: 0;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
