--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ header label:hover {
 
 .block_5{
     width: 100%;
-    height: 900px;
+    height: auto; /* Не задавать фиксированную ширину, теряется адаптивность! */
     background: white;
 }
 
@@ -417,7 +417,7 @@ header label:hover {
     text-align: center;
 }
 
-.block_6 .conntact_p{
+.block_6 .contact_p{
     font-size: 2rem;
     font-weight: bold;
     margin: 10px;
