--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ header {
 
 
 header .logo_nav_a {
-    top: 30px;
+    top: 35px;
     left: 25px;
     position: fixed;
     z-index: 9999;
@@ -103,8 +103,8 @@ header label {
     height: 30px;
     padding: 10px;
     background:  #00ade5;
-    border-right: 1px solid #fff;
-    border-radius: 0 50px 50px 0;
+   /* border-right: 1px solid #fff;*/
+    /*border-radius: 0 50px 50px 0;*/
 }
 header label:hover {
     cursor: pointer;
@@ -124,6 +124,7 @@ header label:hover {
 
 
 .tabs_menu_a a {
+    box-shadow: 5px 5px 15px #373737;;
     display: block;
     padding: 5px 10px;
     text-decoration: none;
@@ -184,6 +185,7 @@ header label:hover {
     }
 
     header label {
+        box-shadow: -2px 4px 9px #373737;
         display: block;
         left: 0;
         position: fixed;
@@ -372,14 +374,14 @@ header label:hover {
     float: left;
     text-align: justify;
     padding: 0 10px;
-    font-size: 1.4rem;
+    font-size: 1rem;
 }
 .right_colom{
     width: 48%;
     float: left;
     text-align: justify;
     padding: 0 10px;
-    font-size: 1.4rem;
+    font-size: 1rem;
 }
 
 
